--- a/ros_packages/mrs_uav_gazebo_simulation/models/mrs_robots_description/sdf/component_snippets.sdf.jinja
+++ b/ros_packages/mrs_uav_gazebo_simulation/models/mrs_robots_description/sdf/component_snippets.sdf.jinja
@@ -1022,7 +1022,7 @@ limitations under the License.
       <gain>2.5</gain>
     </transceiver>
   </sensor>
-</link> 
+</link>
 
 <joint name="uwb_range_joint" type="fixed">
   <parent>{{ parent_link }}</parent>
@@ -3015,7 +3015,7 @@ limitations under the License.
 
 <!-- ground_truth_macro {-->
 {%- macro ground_truth_macro(parent_link, x, y, z, roll, pitch, yaw, spawner_args) -%}
-  
+
   {% set spawner_keyword = 'enable-ground-truth' %}
   {% set spawner_description = 'Enable ROS topic with ground truth odometry published under model namespace' %}
   {% set spawner_default_args = {'topic_name': 'ground_truth', 'frame_name': 'world', 'update_rate': 150} %}
@@ -3023,7 +3023,7 @@ limitations under the License.
   {% set odometry_sensor_name = "ground_truth" %}
 
   {%- if spawner_keyword in spawner_args.keys() -%}
-    
+
     {{ components_base.handle_spawner_args(spawner_keyword, spawner_default_args, spawner_args) }}
 
     <!-- Ground truth {-->
@@ -3052,31 +3052,67 @@ limitations under the License.
 {%- macro garmin_down_macro(parent_link, x, y, z, roll, pitch, yaw, mount, spawner_args) -%}
 
   {% set spawner_keyword = 'enable-rangefinder' %}
-  {% set spawner_description = 'Add a laser rangefinder (Garmin LIDAR-Lite v3) pointing down. Creates a gazebo publisher for gazebo_mavlink_interface. ROS topic must be created by mavros. Do not set range outside of <0.06 - 40.0> (unrealistic)' %}
+  {% set spawner_description = 'Add a laser rangefinder (Garmin LIDAR-Lite v3) pointing down. Creates a Gazebo publisher for gazebo_mavlink_interface. ROS topic must be created by mavros. Do not set range outside of <0.06 - 40.0> (unrealistic)' %}
   {% set spawner_default_args = {'update_rate': 100, 'min_range': 0.1, 'max_range': 36.0, 'noise': 0.01} %}
-  
+
   {%- if spawner_keyword in spawner_args.keys() -%}
-  
+
     {{ components_base.handle_spawner_args(spawner_keyword, spawner_default_args, spawner_args) }}
-  
+
+    {%- set sensor_name = "lidar0" -%}
+
     <!-- garmin down {-->
-    {{ generic.garmin_pixhawk_macro(
-      sensor_name = "lidar0",
-      parent_link = parent_link,
-      sensor_frame = spawner_args['name'] + '/garmin',
-      parent_frame = spawner_args['name'] + '/fcu',
-      update_rate = spawner_args[spawner_keyword]['update_rate'],
-      min_range = spawner_args[spawner_keyword]['min_range'],
-      max_range = spawner_args[spawner_keyword]['max_range'],
-      noise = spawner_args[spawner_keyword]['noise'],
-      x = x,
-      y = y,
-      z = z,
-      roll = roll,
-      pitch = pitch,
-      yaw = yaw)
-    }}
-    
+
+    <!-- sensor {-->
+    <link name="{{ sensor_name }}_link">
+      <pose>{{ x }} {{ y }} {{ z }} {{ roll }} {{ pitch }} {{ yaw }}</pose>
+
+      {{ generic.zero_inertial_macro() }}
+
+      {{ visual_mesh_macro(
+        name = sensor_name,
+        mesh_file = "model://mrs_robots_description/meshes/sensors/garmin_lidar_v3.stl",
+        mesh_scale = "0.001 0.001 0.001",
+        color = "DarkGrey",
+        x = 0.015,
+        y = 0,
+        z = 0,
+        roll = 0,
+        pitch = 0,
+        yaw = 0)
+      }}
+
+      {{ generic.rangefinder_sensor_macro(
+        name = sensor_name,
+        parent_frame_name = spawner_args['name'] + '/fcu',
+        sensor_frame_name = spawner_args['name'] + '/garmin',
+        topic = sensor_name,
+        update_rate = spawner_args[spawner_keyword]['update_rate'],
+        samples = 1,
+        fov = 0.03,
+        min_distance = spawner_args[spawner_keyword]['min_range'],
+        max_distance = spawner_args[spawner_keyword]['max_range'],
+        resolution = 0.005,
+        noise = spawner_args[spawner_keyword]['noise'],
+        x = x,
+        y = y,
+        z = z,
+        roll = roll,
+        pitch = pitch,
+        yaw = yaw)
+      }}
+
+    </link>
+
+    <!-- NOTE: this joint is required by gazebo_mavlink_interface
+      It looks for a joint named ("lidar" + number) or a nested model named ("lidar" + number)
+    -->
+    <joint name='{{ sensor_name }}_joint' type='fixed'>
+      <child>{{ sensor_name }}_link</child>
+      <parent>{{ parent_link }}</parent>
+    </joint>
+    <!--}-->
+
     <!-- mount {-->
     {{ mount }}
     <!--}-->
