--- a/ros_packages/mrs_uav_gazebo_simulation/models/mrs_robots_description/sdf/x500.sdf.jinja
+++ b/ros_packages/mrs_uav_gazebo_simulation/models/mrs_robots_description/sdf/x500.sdf.jinja
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<sdf version='1.6'>
+<sdf version="1.6">
 
   {%- import "component_snippets.sdf.jinja" as components -%}
   {% import "generic_components.sdf.jinja" as generic %}
